[project]
name = "agents-python"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Michael Jarvis", email = "jarvismichael@protonmail.com" }
]
dependencies = [
    "protobuf==6.31.0",
    "psutil==7.0.0",
    "google==3.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/agents_python"]
